--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -3,7 +3,7 @@
 CFLAGS+=
 LDFLAGS+=-lm     # link to math library
 
-TARGET=test_hmm
+TARGET=train
 
 all: $(TARGET)
 # type make/make all to compile test_hmm
